[gd_scene load_steps=2 format=3 uid="uid://foyiwx1rgap0"]

[ext_resource type="Script" uid="uid://5h8sxwsfvdyg" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.2
theme_override_font_sizes/font_size = 44
text = "Dodge the creeps!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 0

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Singleplayer"

[node name="Local multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Local multiplayer"

[node name="Online multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Online multiplayer"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Settings"

[node name="Highscores" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Highscores"

[node name="About" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "About"

[connection signal="pressed" from="VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Local multiplayer" to="." method="_on_local_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Online multiplayer" to="." method="_on_online_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Highscores" to="." method="_on_highscores_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_about_pressed"]
